Được tạo bằng Colab - 2025-12-17 14:15 Chỉ bấm Color, không bấm dung lượng nữa Dung lượng sử dụng bằng link khác nhau

--- a/DiDongViet.ipynb
+++ b/DiDongViet.ipynb
@@ -12,14 +12,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "cellView": "form",
         "id": "TzXjMHJzKGqD",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f0ba5e98-f245-438d-d71d-bab682657761"
+        "outputId": "3fc7d0fa-b3b1-4b60-cd7d-18615ed4f2ae"
       },
       "outputs": [
         {
@@ -46,17 +46,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Ve3itvDKKaYk",
         "collapsed": true,
-        "cellView": "form"
+        "cellView": "form",
+        "outputId": "351a3832-ec17-41c4-e9e3-cf052fc6cf3a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "📋 Đang chạy danh sách tùy chỉnh (1 link).\n",
+            "Found 1 URLs to process.\n",
+            "Processing: https://didongviet.vn/dien-thoai/iphone-15-256gb.html\n",
+            "Saved: iPhone 15 256GB Chính hãng (VN/A) | Xanh dương | 19890000\n",
+            "Saved: iPhone 15 256GB Chính hãng (VN/A) | Đen | 20190000\n",
+            "Saved: iPhone 15 256GB Chính hãng (VN/A) | Hồng | 20490000\n",
+            "\n",
+            "==================================================\n",
+            "🎉 HOÀN THÀNH! 🎉\n",
+            "📂 File kết quả: 5-ddv-2025-12-17.csv\n",
+            "🖼️ Thư mục ảnh: img_ddv\n",
+            "------------------------------\n",
+            "👇 HƯỚNG DẪN TẢI FILE:\n",
+            "1. Nhìn sang thanh bên trái, bấm vào biểu tượng Thư mục (📁).\n",
+            "2. Tìm file .csv và thư mục img_ddv.\n",
+            "3. Chuột phải > Download (Tải xuống).\n",
+            "==================================================\n"
+          ]
+        }
+      ],
       "source": [
         "# @title 2. Nhập link và Chạy Tool\n",
         "# @markdown Dán danh sách link sản phẩm vào ô bên dưới (mỗi link cách nhau bằng dấu phẩy hoặc xuống dòng).\n",
-        "# @markdown **Lưu ý là tool sẽ quét qua tất cả tuỳ chọn dung lượng và màu sắc có trong link. Do đó chỉ cần 1 link cho 1 sản phẩm, ví dụ iPhone 17 pro max chỉ cần 1 link, ko cần check link dung lượng cao hơn gây trùng lắp tốn thời gian.**\n",
         "\n",
         "import asyncio\n",
         "import csv\n",
@@ -68,7 +95,7 @@
         "from playwright.async_api import async_playwright\n",
         "\n",
         "# --- Cấu hình Input ---\n",
-        "ds_link = \"\" #@param {type:\"string\"}\n",
+        "ds_link = \"https://didongviet.vn/dien-thoai/iphone-15-256gb.html\" #@param {type:\"string\"}\n",
         "\n",
         "\n",
         "# Xử lý input\n",
@@ -148,22 +175,13 @@
         "            writer.writerow(data)\n",
         "\n",
         "# --- Core Scrapers ---\n",
-        "async def scrape_product(page, url, csv_path, csv_lock, forced_color=\"Unknown\", current_storage=\"\", screenshot=False):\n",
+        "async def scrape_product(page, url, csv_path, csv_lock, forced_color=\"Unknown\", screenshot=False):\n",
         "    local_tz = pytz.timezone('Asia/Ho_Chi_Minh')\n",
         "    date_str = datetime.now(local_tz).strftime('%Y-%m-%d')\n",
         "\n",
         "    # 1. Product Name\n",
         "    product_name = await get_text_safe(page, \"h1\")\n",
         "    if not product_name: product_name = \"Unknown\"\n",
-        "\n",
-        "    # Check if H1 matches current_storage\n",
-        "    if current_storage and current_storage not in product_name:\n",
-        "        match = re.search(r'(\\d+)\\s?(GB|TB)', product_name, re.IGNORECASE)\n",
-        "        if match:\n",
-        "             old_storage = match.group(0)\n",
-        "             product_name = product_name.replace(old_storage, current_storage)\n",
-        "        else:\n",
-        "             product_name = f\"{product_name} {current_storage}\"\n",
         "\n",
         "    # 2. Price\n",
         "    gia_khuyen_mai = 0\n",
@@ -263,59 +281,6 @@
         "    await write_to_csv(csv_path, data, csv_lock)\n",
         "    print(f\"Saved: {product_name} | {forced_color} | {gia_khuyen_mai}\")\n",
         "\n",
-        "async def process_colors(page, url, csv_path, csv_lock, current_storage=\"\"):\n",
-        "    # STRICT COLOR SELECTOR\n",
-        "    candidates = page.locator(\"//div[contains(@class, 'cursor-pointer')][contains(@class, 'rounded')][not(ancestor::a[@href])][not(ancestor::button)]\")\n",
-        "    count = await candidates.count()\n",
-        "\n",
-        "    color_buttons = []\n",
-        "\n",
-        "    for i in range(count):\n",
-        "        btn = candidates.nth(i)\n",
-        "        if not await btn.is_visible(): continue\n",
-        "\n",
-        "        txt = await btn.inner_text()\n",
-        "\n",
-        "        # Safety Filters\n",
-        "        if \"GB\" in txt or \"TB\" in txt: continue\n",
-        "        upper_txt = txt.upper()\n",
-        "        if \"MUA\" in upper_txt or \"TRẢ GÓP\" in upper_txt or \"THÊM VÀO\" in upper_txt: continue\n",
-        "        if not txt.strip(): continue\n",
-        "\n",
-        "        # Filter out disabled\n",
-        "        class_attr = await btn.get_attribute(\"class\")\n",
-        "        if class_attr and (\"opacity-40\" in class_attr or \"cursor-not-allowed\" in class_attr or \"pointer-events-none\" in class_attr or \"bg-gray-200\" in class_attr):\n",
-        "             continue\n",
-        "\n",
-        "        color_buttons.append((txt.strip(), btn))\n",
-        "\n",
-        "    unique_colors = []\n",
-        "    seen = set()\n",
-        "    for txt, btn in color_buttons:\n",
-        "        if txt not in seen:\n",
-        "            unique_colors.append((txt, btn))\n",
-        "            seen.add(txt)\n",
-        "\n",
-        "    if not unique_colors:\n",
-        "        await scrape_product(page, url, csv_path, csv_lock, forced_color=\"Default\", current_storage=current_storage, screenshot=True)\n",
-        "    else:\n",
-        "        # IMPORTANT: elements become stale after click (page refresh). We must RE-QUERY the element by text.\n",
-        "        for col_name, _ in unique_colors:\n",
-        "            try:\n",
-        "                # Re-locate the button by text to ensure we have a fresh handle\n",
-        "                # Use the same strict selector + filter by text\n",
-        "                fresh_btn = page.locator(\"//div[contains(@class, 'cursor-pointer')][contains(@class, 'rounded')][not(ancestor::a[@href])][not(ancestor::button)]\").filter(has_text=col_name).first\n",
-        "\n",
-        "                if await fresh_btn.count() > 0 and await fresh_btn.is_visible():\n",
-        "                     await fresh_btn.click(force=True)\n",
-        "                     await page.wait_for_timeout(2000) # Wait for price update/DOM refresh\n",
-        "                     await scrape_product(page, url, csv_path, csv_lock, forced_color=col_name, current_storage=current_storage, screenshot=True)\n",
-        "                else:\n",
-        "                    print(f\"  Could not find fresh button for color: {col_name}\")\n",
-        "\n",
-        "            except Exception as e:\n",
-        "                print(f\"Error scraping color {col_name}: {e}\")\n",
-        "\n",
         "async def process_url(semaphore, browser, url, csv_path, csv_lock):\n",
         "    async with semaphore:\n",
         "        page = await browser.new_page(\n",
@@ -336,27 +301,48 @@
         "\n",
         "            await wait_for_overlay(page)\n",
         "\n",
-        "            # STRICT STORAGE SELECTOR\n",
-        "            storage_candidates = page.locator(\"//a[@href]/div[contains(@class, 'cursor-pointer')][contains(@class, 'rounded')]\")\n",
-        "            count = await storage_candidates.count()\n",
+        "            # --- COLOR STRATEGY: Find, Deduplicate, Click, Scrape ---\n",
+        "            # Strict Selector (excludes storage/buy buttons)\n",
+        "            col_selector = \"//div[contains(@class, 'cursor-pointer')][contains(@class, 'rounded')][not(ancestor::a[@href])][not(ancestor::button)]\"\n",
         "\n",
-        "            if count == 0:\n",
-        "                 await process_colors(page, url, csv_path, csv_lock)\n",
+        "            candidates = page.locator(col_selector)\n",
+        "            count = await candidates.count()\n",
+        "\n",
+        "            color_names = []\n",
+        "            for i in range(count):\n",
+        "                btn = candidates.nth(i)\n",
+        "                if await btn.is_visible():\n",
+        "                    txt = await btn.inner_text()\n",
+        "                    txt = txt.strip()\n",
+        "                    # Filter invalid text\n",
+        "                    if not txt or \"GB\" in txt or \"TB\" in txt or \"MUA\" in txt.upper(): continue\n",
+        "                    # Filter disabled\n",
+        "                    class_attr = await btn.get_attribute(\"class\")\n",
+        "                    if class_attr and (\"opacity-40\" in class_attr or \"pointer-events-none\" in class_attr or \"bg-gray-200\" in class_attr):\n",
+        "                        continue\n",
+        "                    color_names.append(txt)\n",
+        "\n",
+        "            # Deduplicate\n",
+        "            unique_colors = sorted(list(set(color_names)), key=color_names.index) if color_names else []\n",
+        "\n",
+        "            if not unique_colors:\n",
+        "                 # No colors? Scrape default view\n",
+        "                 await scrape_product(page, url, csv_path, csv_lock, forced_color=\"Default\", screenshot=True)\n",
         "            else:\n",
-        "                for i in range(count):\n",
+        "                 # Click each Unique Color\n",
+        "                 for col_name in unique_colors:\n",
         "                    try:\n",
-        "                        storage_candidates = page.locator(\"//a[@href]/div[contains(@class, 'cursor-pointer')][contains(@class, 'rounded')]\")\n",
-        "                        btn_div = storage_candidates.nth(i)\n",
+        "                        # RE-QUERY by text to avoid Stale Elements\n",
+        "                        fresh_btn = page.locator(col_selector).filter(has_text=col_name).first\n",
         "\n",
-        "                        if await btn_div.is_visible():\n",
-        "                            store_text = await btn_div.inner_text()\n",
-        "                            store_text = store_text.strip()\n",
-        "\n",
-        "                            await btn_div.click(force=True)\n",
-        "                            await page.wait_for_timeout(1000)\n",
-        "                            await process_colors(page, url, csv_path, csv_lock, current_storage=store_text)\n",
+        "                        if await fresh_btn.count() > 0 and await fresh_btn.is_visible():\n",
+        "                             await fresh_btn.click(force=True)\n",
+        "                             await page.wait_for_timeout(2000) # DOM refresh wait\n",
+        "                             await scrape_product(page, url, csv_path, csv_lock, forced_color=col_name, screenshot=True)\n",
+        "                        else:\n",
+        "                            print(f\"  Color not found/visible: {col_name}\")\n",
         "                    except Exception as e:\n",
-        "                        print(f\"Error selecting storage {i}: {e}\")\n",
+        "                        print(f\"Error clicking color {col_name}: {e}\")\n",
         "\n",
         "        except Exception as e:\n",
         "            print(f\"Error processing URL {url}: {e}\")\n",
@@ -399,12 +385,21 @@
         "if __name__ == \"__main__\":\n",
         "    await main()\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QdKTmxdlKQGG"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjeZnHgH5IIMaKKQKQ0LAO",
+      "authorship_tag": "ABX9TyMsVXdtwe+6q8JPnkSwMRoJ",
       "include_colab_link": true
     },
     "kernelspec": {
